@@ -1,4 +1,7 @@
-Author:       cdunlap@llnl.gov
-Date:         2004-04-30
-Name:         munge
-Version:      0.3
+Package:        munge
+Version:        0.3
+Date:           2004-04-30
+Author:         cdunlap@llnl.gov
+LT_Current:     0
+LT_Revision:    0
+LT_Age:         0
